--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link href="./css/header.css" rel="stylesheet" type="text/css" >
     <link href="./css/economy.css" rel="stylesheet" type="text/css">
     <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./css/slider.css">
     <link rel="stylesheet" href="./css/social-likes_flat.css">
     <link rel="stylesheet" href="./css/index.css">
     <!-- endbuild -->
