--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link href="./css/economy_inventory.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./css/slider.css">
     <link rel="stylesheet" href="./css/social-likes_flat.css">
+    <link rel="stylesheet" href="./css/minimap.css">
     <link rel="stylesheet" href="./css/index.css">
     <!-- endbuild -->
     <!-- build:js main.js -->
@@ -41,6 +42,7 @@
     <script src="./js/social-likes.min.js"></script>
     <script src="./js/jquery.smooth-scroll.min.js"></script>
     <script src="./js/interact-1.2.2.min.js"></script>
+    <script src="./js/minimap.js"></script>
     <script src="./js/index.js"></script>
     <!-- endbuild -->
 </head>
