--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 Don't know what are You doing here? Click!</a></span>
             <span style="float:right"><div id="steamAuth"></div></span>
         </div>
+        <div class="backsList" id="backsList"></div>
     </div>
 </div>
 <div class="body">
