--- a/index.html
+++ b/index.html
@@ -442,15 +442,15 @@
             <div class="commentthread_count">
                 <span class="commentthread_header_label">Comments</span>
             </div>
-            <div class="commentthread_paging" id="commentthread_Profile_76561198028933492_0_pagecontrols">
+            <!--<div class="commentthread_paging" id="commentthread_Profile_76561198028933492_0_pagecontrols">
                 <a class="commentthread_allcommentslink" href="http://steamcommunity.com/id/wolfenstian/allcomments">View all <span id="commentthread_Profile_76561198028933492_0_totalcount">81</span> comments</a>
                 <span id="commentthread_Profile_76561198028933492_0_pagebtn_prev" class="pagebtn disabled">&lt;</span>
                 <span id="commentthread_Profile_76561198028933492_0_pagelinks"><span class="commentthread_pagelink active">1 </span><span class="commentthread_pagelink">2 </span><span class="commentthread_pagelink">3 </span><span class="commentthread_pagelink">4 </span><span class="commentthread_pagelink">5 </span><span class="commentthread_pagelink">6 </span> ... <span class="commentthread_pagelink">14 </span></span>
                 <span id="commentthread_Profile_76561198028933492_0_pagebtn_next" class="pagebtn">&gt;</span>
-            </div>
+            </div>-->
             <div style="clear: both;"></div>
         </div>
-        <form id="commentthread_Profile_76561198028933492_0_form" name="commentthread_Profile_76561198028933492_0_form" action="" method="post" onsubmit="return false;">
+        <!--<form id="commentthread_Profile_76561198028933492_0_form" name="commentthread_Profile_76561198028933492_0_form" action="" method="post" onsubmit="return false;">
             <div class="commentthread_entry">
                 <div class="commentthread_user_avatar playerAvatar online">
                     <a href="http://steamcommunity.com/id/TrueCarry">
@@ -473,8 +473,21 @@
                 <div class="commentthread_entry_error" id="commentthread_Profile_76561198028933492_0_entry_error">
                 </div>
             </div>
-        </form>
-        <div class="commentthread_comment_container" id="commentthread_Profile_76561198028933492_0_postcontainer">
+        </form>-->
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES * * */
+            var disqus_shortname = 'sapic';
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+        <!--<div class="commentthread_comment_container" id="commentthread_Profile_76561198028933492_0_postcontainer">
             <div class="commentthread_comments" id="commentthread_Profile_76561198028933492_0_posts">
                 <div class="commentthread_comment  " id="comment_617320628370063354" style="">
                     <div class="commentthread_comment_avatar playerAvatar in-game">
@@ -597,15 +610,15 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="commentthread_footer">
+        </div>-->
+        <!--<div class="commentthread_footer">
             <div class="commentthread_paging" id="commentthread_Profile_76561198028933492_0_fpagecontrols">
                 <span id="commentthread_Profile_76561198028933492_0_fpagebtn_prev" class="pagebtn disabled">&lt;</span>
                 <span id="commentthread_Profile_76561198028933492_0_fpagelinks"><span class="commentthread_pagelink active">1 </span><span class="commentthread_pagelink">2 </span><span class="commentthread_pagelink">3 </span><span class="commentthread_pagelink">4 </span><span class="commentthread_pagelink">5 </span><span class="commentthread_pagelink">6 </span> ... <span class="commentthread_pagelink">14 </span></span>
                 <span id="commentthread_Profile_76561198028933492_0_fpagebtn_next" class="pagebtn">&gt;</span>
             </div>
             <div style="clear: both;"></div>
-        </div>
+        </div>-->
     </div>				</div>
 </div>
 
