Moar chat fixes

--- a/index.html
+++ b/index.html
@@ -474,8 +474,7 @@
                 </div>
             </div>
         </form>-->
-        <div id="disqus_thread"></div>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+        <iframe allowtransparency="true" frameborder="0" scrolling="no" tabindex="0" title="Disqus" width="100%" src="chat.html" style="width: 100% !important; border: none !important; overflow: hidden !important; height: 321px !important;" horizontalscrolling="no" verticalscrolling="no"></iframe>
         <!--<div class="commentthread_comment_container" id="commentthread_Profile_76561198028933492_0_postcontainer">
             <div class="commentthread_comments" id="commentthread_Profile_76561198028933492_0_posts">
                 <div class="commentthread_comment  " id="comment_617320628370063354" style="">
