--- a/chat.html
+++ b/chat.html
@@ -24,11 +24,8 @@
 <body>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'sapic'; // Required - Replace '<example>' with your forum shortname
+    var disqus_shortname = 'sapic';
     var disqus_url = 'http://sapic.github.io/';
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
