--- a/chat.html
+++ b/chat.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-<div id="disqus_thread"></div>
+<div id="disqus_thread" style="max-height: 600px"></div>
 <script type="text/javascript">
     var disqus_shortname = 'sapic';
     var disqus_url = 'http://sapic.github.io/';
