Final chat fix ;)

--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@
                 </div>
             </div>
         </form>-->
-        <iframe allowtransparency="true" frameborder="0" tabindex="0" title="Disqus" width="100%" src="chat.html" style="width: 100% !important; border: none !important; overflow-y: scroll !important; height: 600px !important;" horizontalscrolling="no"></iframe>
+        <div id=disqus_thread></div>
+        <noscript>Please enable JavaScript to view the <a href=https://disqus.com/?ref_noscript>comments powered by Disqus.</a></noscript>
         <!--<div class="commentthread_comment_container" id="commentthread_Profile_76561198028933492_0_postcontainer">
             <div class="commentthread_comments" id="commentthread_Profile_76561198028933492_0_posts">
                 <div class="commentthread_comment  " id="comment_617320628370063354" style="">
