Firefox One Love

--- a/index.html
+++ b/index.html
@@ -127,9 +127,12 @@
                         <div class="gray_bevel for_text_input">
                             <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste custom image URL here...">
                         </div>
-                        <a class="btn_profile_action btn_medium" id="goUrl">
+                        <!--<a class="btn_profile_action btn_medium" id="goUrl">
                             <span>Change BG</span>
-                        </a>
+                        </a>-->
+                        <div class="btn_profile_action btn_medium" id="goUrl">
+                            <span>Change BG</span>
+                        </div>
                     </div>
                     <div class="profile_summary">
                         Share Us:
