Removed jQ from onclick

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span>Filter: <input type="text" id="filterIn"></span>
             <!--<span><a class="top_hint" target="_blank" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">
                 Don't know what are You doing here? Click!</a></span>-->
-            <span><a class="top_hint" click="{ $('body').scrollTo('#disqus_thread') }">
+            <span><a class="top_hint">
                 Give your feedback in comments!</a></span>
             <span style="float:right"><div id="steamAuth"></div></span>
         </div>
