--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                     <div class="profile_summary_footer">
-                        <span class="whiteLink">View more info</span>
+                        <div class="btn_profile_action btn_medium" id="getBg"><span>Get this background</span></div>
                     </div>
                 </div>
 
