--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <script src="./js/jquery.smooth-scroll.min.js"></script>
     <script src="./js/interact-1.2.2.min.js"></script>
     <script src="./js/minimap.js"></script>
+    <script src="./js/FileSaver.js"></script>
+    <script src="./js/jszip.js"></script>
     <script src="./js/index.js"></script>
     <!-- endbuild -->
 </head>
@@ -150,6 +152,7 @@
                     </div>
                     <div class="profile_summary_footer">
                         <div class="btn_profile_action btn_medium" id="getBg"><span>Get this background</span></div>
+                        <div class="btn_profile_action btn_medium" id="saveAll"><span>Download all images</span></div>
                     </div>
                 </div>
 
@@ -170,7 +173,7 @@
 
     <div class="profile_customization" id="cSize">
         <div class="profile_customization_header">Artwork Showcase
-
+            <span class="customization_header_download" id="saveFirst">Download this showcase</span>
         </div>
 
         <div class="profile_customization_block">
@@ -212,7 +215,9 @@
         </div>
     </div>
     <div class="profile_customization">
-        <div class="profile_customization_header">Screenshot Showcase        </div>
+        <div class="profile_customization_header">Screenshot Showcase
+            <span class="customization_header_download" id="saveSecond">Download this showcase</span>
+        </div>
 
         <div class="profile_customization_block">
             <div class="screenshot_showcase">
