--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
                 </div>
             </div>
         </form>-->
+        <iframe src="http://strawpoll.me/embed_1/3947458" style="width: 636px; height: 390px; border: 0;">Loading poll...</iframe>
         <div id=disqus_thread></div>
         <noscript>Please enable JavaScript to view the <a href=https://disqus.com/?ref_noscript>comments powered by Disqus.</a></noscript>
         <!--<div class="commentthread_comment_container" id="commentthread_Profile_76561198028933492_0_postcontainer">
