--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <span>Filter: <input type="text" id="filterIn"></span>
             <!--<span><a class="top_hint" target="_blank" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">
                 Don't know what are You doing here? Click!</a></span>-->
-            <span><a class="top_hint" href="http://strawpoll.me/3947458">
-                Vote for image format</a></span>
+            <span><a class="top_hint">
+                You can give your feedback in comments!</a></span>
             <span style="float:right"><div id="steamAuth"></div></span>
         </div>
         <div class="backsList" id="backsList"></div>
@@ -487,7 +487,6 @@
                 </div>
             </div>
         </form>-->
-        <iframe src="http://strawpoll.me/embed_1/3947458" style="width: 636px; height: 390px; border: 0;">Loading poll...</iframe>
         <div id=disqus_thread></div>
         <noscript>Please enable JavaScript to view the <a href=https://disqus.com/?ref_noscript>comments powered by Disqus.</a></noscript>
         <!--<div class="commentthread_comment_container" id="commentthread_Profile_76561198028933492_0_postcontainer">
