--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <span>Filter: <input type="text" id="filterIn"></span>
             <!--<span><a class="top_hint" target="_blank" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">
                 Don't know what are You doing here? Click!</a></span>-->
-            <span><a class="top_hint">
-                You can give your feedback in comments!</a></span>
+            <span><a class="top_hint" href="http://www.youtube.com/watch?v=8f6_V-wPVZU">
+                Video guide!</a></span>
             <span style="float:right"><div id="steamAuth"></div></span>
         </div>
         <div class="backsList" id="backsList"></div>
