--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span>Filter: <input type="text" id="filterIn"></span>
             <!--<span><a class="top_hint" target="_blank" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">
                 Don't know what are You doing here? Click!</a></span>-->
-            <span><a class="top_hint" href="http://www.youtube.com/watch?v=8f6_V-wPVZU">
+            <span><a class="top_hint" href="https://www.youtube.com/watch?v=6Bj6oxaN5DY">
                 Video guide!</a></span>
             <span style="float:right"><div id="steamAuth"></div></span>
         </div>
@@ -275,7 +275,7 @@
                             <div class="guide_showcase_appinfo">
                                 <div class="workshop_showcase_stars">
                                     <img src="http://steamcommunity-a.akamaihd.net/public/images/sharedfiles/5-star.png?v=1">
-                                    2750+ ratings!															</div>
+                                    3000+ ratings!															</div>
                                 <div class="workshop_showcase_app">
                                     <a href="http://steamcommunity.com/workshop/browse/?appid=440"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/440/e3f595a92552da3d664ad00277fad2107345f743.jpg"></a> <a class="whiteLink" href="http://steamcommunity.com/workshop/browse/?appid=440">Team Fortress 2</a>
                                 </div>
