--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						</span>
                         <div id="NamePopup" class="popup_block_new" style="display: none;">
                             <div class="popup_body popup_menu">
-                                <div>Этот пользователь также был известен как:</div>
+                                <div>Also known as:</div>
                                 <div id="NamePopupAliases">
 
                                 </div>
@@ -865,6 +865,17 @@ Level 5 Chivalry: Medieval Warfare Badge">
         </div>
     </div>
 </div>
+
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- sapic-right-res -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-1034829471687394"
+         data-ad-slot="6374050068"
+         data-ad-format="auto"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
 </div>
 
