--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- endbuild -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
+
     </script>
 </head>
 <body>
@@ -870,11 +870,7 @@ Level 5 Chivalry: Medieval Warfare Badge">
     </div>
 </div>
     <!-- sapic-right-res -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-1034829471687394"
-         data-ad-slot="6374050068"
-         data-ad-format="auto"></ins>
+    <div class="adsblock" width="268"></div>
 
 </div>
 
