--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@ Level 5 Chivalry: Medieval Warfare Badge">
     </div>
 </div>
     <!-- sapic-right-res -->
-    <div class="adsblock" width="268"></div>
+    <div class="underfr" width="268"></div>
 
 </div>
 
