--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
 
 <div class="profile_comment_area">
     <div class="commentthread_area" id="commentthread_Profile_76561198028933492_0_area">
+        <div class="undercom"></div>
         <div class="commentthread_header">
             <div class="commentthread_count">
                 <span class="commentthread_header_label">Comments</span>
