--- a/index.html
+++ b/index.html
@@ -78,6 +78,110 @@
 
             <div class="profile_header_content">
 
+                <div class="profile_header_centered_persona">
+                    <div class="persona_name" style="font-size: 24px;">
+                        <span class="actual_persona_name">SloWolfe</span>
+                                            <span class="namehistory_link" onclick="ShowAliasPopup( this );">
+                            <img id="getnamehistory_arrow" src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/arrowDn9x5.gif" width="9" height="5" border="0">
+                        </span>
+                        <div id="NamePopup" class="popup_block_new" style="display: none;">
+                            <div class="popup_body popup_menu">
+                                <div>This user has also played as:</div>
+                                <div id="NamePopupAliases">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="header_real_name ellipsis">
+                        <bdi>Dumbfuck</bdi>
+                        &nbsp;
+                        <img class="profile_flag" src="https://steamcommunity-a.akamaihd.net/public/images/countryflags/ca.gif">
+                        Canada					</div>
+
+                    <div class="gray_bevel for_text_input">
+                        <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste custom image URL here...">
+                    </div>
+                    <div class="btn_profile_action btn_medium" id="goUrl">
+                        <span>Change BG</span>
+                    </div>
+                </div>
+
+                <div class="playerAvatar playerAvatarAutoSize profile_header_size offline">
+                    <div class="playerAvatarAutoSizeInner">
+                        <img id="avatar">
+                    </div>
+                </div>
+                <div class="profile_header_badgeinfo">
+                    <div class="profile_header_badgeinfo_badge_area">
+                        <a href="https://steamcommunity.com/id/wolfenstian/badges">
+                            <div class="persona_name persona_level">Level <div class="friendPlayerLevel lvl_50"><span class="friendPlayerLevelNum">54</span></div></div>
+                        </a>
+                        <div class="profile_header_badge">
+                            <div class="resizeType">
+                                <div class="favorite_badge" id="badgesPlace">
+                                    <div class="types-selector" style="margin-left: 4px">
+                                        <input checked="checked" id="bn" type="radio" name="Type" value="bn" />
+                                        <label class="types bn" for="bn"></label>
+                                        <input id="nn" type="radio" name="Type" value="nn" />
+                                        <label class="types nn" for="nn"></label>
+                                        <input id="nb" type="radio" name="Type" value="nb" />
+                                        <label class="types nb" for="nb"></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="resizeType" style="display: none">
+                                <div class="favorite_badge">
+                                    First: <input type="range" id="slFSize" class="imgSizeSlider" min="287" max="509" value="509"><br>
+                                    Second: <input type="range" id="slSSize" class="imgSizeSlider" min="287" max="509" value="287">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="profile_header_actions">
+                        <div class="btn_profile_action btn_medium" id="toggleResize">
+                            <span>Free resize</span>
+                        </div>
+                        <div class="btn_profile_action btn_medium" id="randomBG">
+                            <span>Random Background</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="profile_header_summary">
+                    <div class="persona_name persona_name_spacer" style="font-size: 24px;">
+                        <span class="actual_persona_name">&nbsp;</span>
+                    </div>
+                    <div class="header_real_name_spacer">&nbsp;</div>
+                    <div class="profile_summary">
+                        Share Us:
+                        <div class="social-likes" data-url="http://sapic.github.io/" data-title="Steam AP Background Cropper">
+                            <div class="facebook" title="Share link on Facebook">Facebook</div>
+                            <div class="twitter" title="Share link on Twitter">Twitter</div>
+                            <div class="plusone" title="Share link on Google+">Google+</div>
+                            <div class="vkontakte" title="Share link on VK">VK</div>
+                        </div>
+                    </div>
+                    <div class="profile_summary_footer">
+                        <div class="btn_profile_action btn_medium" id="getBg"><span>Get this background</span></div>
+                        <div class="btn_profile_action btn_medium" id="saveAll"><span>Download all images</span></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!--<div class="profile_header_bg">
+
+
+    <div class="profile_header_bg_texture">
+
+        <div class="profile_header">
+
+            <div class="profile_header_content">
+
                 <div class="playerAvatar profile_header_size offline">
                     <img id="avatar">
                 </div>
@@ -137,9 +241,6 @@
                         <div class="gray_bevel for_text_input">
                             <input class="dynInput" type="text" name="real_name" id="urlIn" size="30" placeholder="You can paste custom image URL here...">
                         </div>
-                        <!--<a class="btn_profile_action btn_medium" id="goUrl">
-                            <span>Change BG</span>
-                        </a>-->
                         <div class="btn_profile_action btn_medium" id="goUrl">
                             <span>Change BG</span>
                         </div>
@@ -162,7 +263,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 <div class="profile_content has_profile_background">
 
 <div class="profile_background_holder_content">
