--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="profile_header_badgeinfo">
                     <div class="profile_header_badgeinfo_badge_area">
                         <a href="https://steamcommunity.com/id/wolfenstian/badges">
-                            <div class="persona_name persona_level">Level <div class="friendPlayerLevel lvl_50"><span class="friendPlayerLevelNum">54</span></div></div>
+                            <div class="persona_name persona_level">Level  <div class="friendPlayerLevel lvl_50"><span class="friendPlayerLevelNum">54</span></div></div>
                         </a>
                         <div class="profile_header_badge">
                             <div class="resizeType">
@@ -163,12 +163,12 @@
                             <div class="vkontakte" title="Share link on VK">VK</div>
                         </div>
                     </div>
-                    <div class="profile_summary_footer">
-                        <div class="btn_profile_action btn_medium" id="getBg"><span>Get this background</span></div>
-                        <div class="btn_profile_action btn_medium" id="saveAll"><span>Download all images</span></div>
-                    </div>
+					<div class="profile_summary_footer">
+						<div class="btn_profile_action btn_medium" id="getBg"><span>Buy This Background</span></div>
+						<div class="btn_profile_action btn_medium" id="saveAll"><span>Download ZIP</span></div>
+						<a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button"><span>SCM Preview</span></a>
+					</div>
                 </div>
-
             </div>
         </div>
     </div>
