Updated title to be more user friendly

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Steam AP Background Cropper</title>
+    <title>Steam Background Cropper</title>
     <meta name="description" content="Steam Profile Background Crop Tool"/>
     <meta name="keywords" content="steam, profile, crop, steam profile, background crop, background crop tool" />
     <!-- for Facebook -->
