Fixed some random stuff
Corrected spacing issues
Updated share title
Changed date grammar to US format (sorry, was bothering me)

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="profile_header_badgeinfo">
                     <div class="profile_header_badgeinfo_badge_area">
                         <a href="https://steamcommunity.com/id/wolfenstian/badges">
-                            <div class="persona_name persona_level">Level  <div class="friendPlayerLevel lvl_50"><span class="friendPlayerLevelNum">54</span></div></div>
+                            <div class="persona_name persona_level">Level <div class="friendPlayerLevel lvl_50"><span class="friendPlayerLevelNum">54</span></div></div>
                         </a>
                         <div class="profile_header_badge">
                             <div class="resizeType">
@@ -141,7 +141,7 @@
                     </div>
                     <div class="profile_header_actions">
                         <div class="btn_profile_action btn_medium" id="toggleResize">
-                            <span>Free resize</span>
+                            <span>Free Resize</span>
                         </div>
                         <div class="btn_profile_action btn_medium" id="randomBG">
                             <span>Random Background</span>
@@ -156,15 +156,15 @@
                     <div class="header_real_name_spacer">&nbsp;</div>
                     <div class="profile_summary">
                         Share Us:
-                        <div class="social-likes" data-url="http://sapic.github.io/" data-title="Steam AP Background Cropper">
-                            <div class="facebook" title="Share link on Facebook">Facebook</div>
-                            <div class="twitter" title="Share link on Twitter">Twitter</div>
-                            <div class="plusone" title="Share link on Google+">Google+</div>
-                            <div class="vkontakte" title="Share link on VK">VK</div>
+                        <div class="social-likes" data-url="http://sapic.github.io/" data-title="I made a cool Steam profile with this! It's so cool!">
+                            <div class="facebook" title="Share link on Facebook"> Facebook</div>
+                            <div class="twitter" title="Share link on Twitter"> Twitter</div>
+                            <div class="plusone" title="Share link on Google+"> Google+</div>
+                            <div class="vkontakte" title="Share link on VK"> VK</div>
                         </div>
                     </div>
 					<div class="profile_summary_footer">
-						<div class="btn_profile_action btn_medium" id="getBg"><span>Buy This Background</span></div>
+						<div class="btn_profile_action btn_medium" id="getBg"><span>Buy This BG</span></div>
 						<div class="btn_profile_action btn_medium" id="saveAll"><span>Download ZIP</span></div>
 						<a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button"><span>SCM Preview</span></a>
 					</div>
@@ -407,7 +407,7 @@
                 <div class="game_info_cap"><a href="http://steamcommunity.com/app/218230"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/218230/8bb9796bf871a1d620b28db4dfb2abef2138542d.jpg"></a></div>
                 <div class="game_info_details">
                     138 hrs on record<br>
-                    last played on 1 Dec																			</div>
+                    last played on Dec 1																			</div>
                 <div class="game_name"><a class="whiteLink" href="http://steamcommunity.com/app/218230">PlanetSide 2</a></div>
             </div>
 
@@ -427,7 +427,7 @@
                 <div class="game_info_cap"><a href="http://steamcommunity.com/app/12900"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/12900/75dc0398efeae1cc994714e37c893b593f9c9a88.jpg"></a></div>
                 <div class="game_info_details">
                     19.9 hrs on record<br>
-                    last played on 30 Nov																			</div>
+                    last played on Nov 30																			</div>
                 <div class="game_name"><a class="whiteLink" href="http://steamcommunity.com/app/12900">Audiosurf</a></div>
             </div>
 
@@ -483,7 +483,7 @@
                 <div class="game_info_cap"><a href="http://steamcommunity.com/app/227700"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/227700/89c55efb73b88472ae69315dc691353955edcd98.jpg"></a></div>
                 <div class="game_info_details">
                     238 hrs on record<br>
-                    last played on 29 Nov																			</div>
+                    last played on Nov 29																			</div>
                 <div class="game_name"><a class="whiteLink" href="http://steamcommunity.com/app/227700">Firefall</a></div>
             </div>
 
