Updated to Slowolfe's profile more Added footer notes

--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
                            <a href="http://steamcommunity.com/id/wolfenstian/groups/">
                            <span class="count_link_label">Groups</span>&nbsp;
                            <span class="profile_count_link_total">
-                           18															</span>
+                           11															</span>
                            </a>
                         </div>
                         <div class="profile_group profile_primary_group">
@@ -825,7 +825,7 @@
                            </div>
                            <a class="whiteLink" href="http://steamcommunity.com/groups/OpenTester">
                            OpenTester						</a>
-                           <br>23 Members						
+                           <br>21 Members						
                            <div style="clear: left;"></div>
                         </div>
                         <div class="profile_group">
@@ -836,7 +836,7 @@
                            </div>
                            <a class="whiteLink" href="http://steamcommunity.com/groups/horobox">
                            HoroBox							</a>
-                           <br>205 Members							
+                           <br>275 Members							
                            <div style="clear: left;"></div>
                         </div>
                         <div class="profile_group">
@@ -847,7 +847,7 @@
                            </div>
                            <a class="whiteLink" href="http://steamcommunity.com/groups/TF2R-D">
                            TF2R.com Development Group							</a>
-                           <br>27,925 Members							
+                           <br>31,760 Members							
                            <div style="clear: left;"></div>
                         </div>
                      </div>
@@ -856,7 +856,7 @@
                            <a href="http://steamcommunity.com/id/wolfenstian/friends/">
                            <span class="count_link_label">Friends</span>&nbsp;
                            <span class="profile_count_link_total">
-                           113															</span>
+                           501															</span>
                            </a>
                         </div>
                         <div class="profile_topfriends profile_count_link_preview">
@@ -966,6 +966,9 @@
             <span id="footerLogo"><img src="https://steamcommunity-a.akamaihd.net/public/images/skin_1/footerLogo_valve.png" width="96" height="26" border="0" alt="Логотип Valve"></span>
             <span id="footerText">
             Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.
+            </span>
+            <span id="footerText">
+                Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a>
             </span>
          </div>
       </div>
