--- a/index.html
+++ b/index.html
@@ -731,38 +731,41 @@
                         <div class="profile_in_game_name">Last Online: 9 hrs, 35 mins ago</div>
                      </div>
                      <div class="profile_badges">
-                        <div class="profile_count_link">
-                           <a href="http://steamcommunity.com/id/wolfenstian/badges/">
-                           <span class="count_link_label">Badges</span>&nbsp;
-                           <span class="profile_count_link_total">
-                           59															</span>
-                           </a>
+                        <div class="profile_count_link_preview_ctn">
+                           <div class="profile_count_link ellipsis">
+                              <a href="http://steamcommunity.com/id/wolfenstian/badges/">
+                              <span class="count_link_label">Badges</span>&nbsp;
+                              <span class="profile_count_link_total">
+                              59															</span>
+                              </a>
+                           </div>
+                           <div class="profile_count_link_preview">
+                              <div class="profile_badges_badge " data-community-tooltip="General<br>
+                                 Level 5 The Chosen RPG Badge">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/434420">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/434420/dfcf0e4a4c1ea3e66d66ad22feb87bfb15538c76.png">
+                                 </a>
+                              </div>
+                              <div class="profile_badges_badge " data-community-tooltip="Community Leader">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/badges/2">
+                                 <img src="http://steamcommunity-a.akamaihd.net/public/images/badges/01_community/communityleader_54.png">
+                                 </a>
+                              </div>
+                              <div class="profile_badges_badge " data-community-tooltip="North Pole Noir Lvl 5<br>
+                                 Level 5 Holiday Sale 2015 Badge">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/425280">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/425280/4738ad301f5fe5a45ecad2bd0916d670bcc0ff7d.png">
+                                 </a>
+                              </div>
+                              <div class="profile_badges_badge last" data-community-tooltip="Colored Cube<br>
+                                 Level 3 Gravilon Badge">
+                                 <a href="http://steamcommunity.com/id/wolfenstian/gamecards/355150">
+                                 <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/355150/303b6f1445aef3f477d931ccff376f4a61da01e0.png">
+                                 </a>
+                              </div>
+                              <div style="clear: left;"></div>
+                           </div>
                         </div>
-                        <div class="profile_badges_badge ">
-                           <a href="http://steamcommunity.com/id/wolfenstian/badges/1" title="Years of Service
-                              Member since 13 August, 2010.">
-                           <img src="http://steamcommunity-a.akamaihd.net/public/images/badges/02_years/steamyears402_54.png">
-                           </a>
-                        </div>
-                        <div class="profile_badges_badge ">
-                           <a href="http://steamcommunity.com/id/wolfenstian/gamecards/218680" title="Starite
-                              Level 3 Scribblenauts Unlimited Badge">
-                           <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/218680/7b35ac199cd6500d9d2d56c341181c0277d3f7bc.png">
-                           </a>
-                        </div>
-                        <div class="profile_badges_badge ">
-                           <a href="http://steamcommunity.com/id/wolfenstian/gamecards/252490" title="Professional Caveman
-                              Level 5 Rust Badge">
-                           <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/252490/6a60438198b0c73b62669296aee3e3e0f64113b8.png">
-                           </a>
-                        </div>
-                        <div class="profile_badges_badge last">
-                           <a href="http://steamcommunity.com/id/wolfenstian/gamecards/219640" title="Lord
-                              Level 5 Chivalry: Medieval Warfare Badge">
-                           <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/219640/4da6a36344d84133866c0dcd9fb9899a5d13fb74.png">
-                           </a>
-                        </div>
-                        <div style="clear: left;"></div>
                      </div>
                      <div class="profile_item_links">
                         <div class="profile_count_link">
@@ -968,7 +971,7 @@
             Powered by STEAM. Cookies help us deliver our services. By using our services, you agree to our use of cookies.
             </span>
             <span id="footerText">
-                Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a>
+            Made by <a href="https://steamcommunity.com/id/truecarry">TrueCarry</a> with help from <a href="https://steamcommunity.com/id/theoddball">The Oddball</a>
             </span>
          </div>
       </div>
