Updated Front page further

--- a/index.html
+++ b/index.html
@@ -768,42 +768,14 @@
                         </div>
                      </div>
                      <div class="profile_item_links">
-                        <div class="profile_count_link">
-                           <a href="http://steamcommunity.com/id/wolfenstian/games/">
+                        <div class="profile_count_link ellipsis">
+                           <a href="http://steamcommunity.com/id/wolfenstian/games/?tab=all">
                            <span class="count_link_label">Games</span>&nbsp;
                            <span class="profile_count_link_total">
                            335															</span>
                            </a>
                         </div>
-                        <div class="profile_count_link">
-                           <a href="http://steamcommunity.com/id/wolfenstian/screenshots/">
-                           <span class="count_link_label">Screenshots</span>&nbsp;
-                           <span class="profile_count_link_total">
-                           792															</span>
-                           </a>
-                        </div>
-                        <div class="profile_count_link">
-                           <a href="http://steamcommunity.com/id/wolfenstian/myworkshopfiles/?section=guides">
-                           <span class="count_link_label">Guides</span>&nbsp;
-                           <span class="profile_count_link_total">
-                           2															</span>
-                           </a>
-                        </div>
-                        <div class="profile_count_link">
-                           <a href="http://steamcommunity.com/id/wolfenstian/images/">
-                           <span class="count_link_label">Artwork</span>&nbsp;
-                           <span class="profile_count_link_total">
-                           12															</span>
-                           </a>
-                        </div>
-                        <div class="profile_count_link">
-                           <a href="http://steamcommunity.com/id/wolfenstian/myworkshopfiles/?section=greenlight">
-                           <span class="count_link_label">Greenlight Items</span>&nbsp;
-                           <span class="profile_count_link_total">
-                           1															</span>
-                           </a>
-                        </div>
-                        <div class="profile_count_link">
+                        <div class="profile_count_link ellipsis">
                            <a href="http://steamcommunity.com/id/wolfenstian/inventory/">
                               <span class="count_link_label">Inventory</span>&nbsp;
                               <span class="profile_count_link_total">
@@ -811,6 +783,35 @@
                               </span>
                            </a>
                         </div>
+                        <div class="profile_count_link ellipsis">
+                           <a href="http://steamcommunity.com/id/wolfenstian/screenshots/">
+                           <span class="count_link_label">Screenshots</span>&nbsp;
+                           <span class="profile_count_link_total">
+                           792															</span>
+                           </a>
+                        </div>
+                        <div class="profile_count_link ellipsis">
+                           <a href="http://steamcommunity.com/id/wolfenstian/myworkshopfiles/?section=guides">
+                           <span class="count_link_label">Guides</span>&nbsp;
+                           <span class="profile_count_link_total">
+                           2															</span>
+                           </a>
+                        </div>
+                        <div class="profile_count_link ellipsis">
+                           <a href="http://steamcommunity.com/id/wolfenstian/images/">
+                           <span class="count_link_label">Artwork</span>&nbsp;
+                           <span class="profile_count_link_total">
+                           12															</span>
+                           </a>
+                        </div>
+                        <div class="profile_count_link ellipsis">
+                           <a href="http://steamcommunity.com/id/wolfenstian/myworkshopfiles/?section=greenlight">
+                           <span class="count_link_label">Greenlight Items</span>&nbsp;
+                           <span class="profile_count_link_total">
+                           1															</span>
+                           </a>
+                        </div>
+                        <div style="clear: left;"></div>
                      </div>
                      <div class="profile_group_links">
                         <div class="profile_count_link">
