Really fixed level spacing this time

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="profile_header_badgeinfo">
                            <div class="profile_header_badgeinfo_badge_area">
                               <a href="https://steamcommunity.com/id/wolfenstian/badges">
-                                 <div class="persona_name persona_level"><span>Level </span><div class="friendPlayerLevel lvl_60"><span class="friendPlayerLevelNum">61</span></div>
+                                 <div class="persona_name persona_level"><span>Level&nbsp;</span><div class="friendPlayerLevel lvl_60"><span class="friendPlayerLevelNum">61</span></div>
                                  </div>
                               </a>
                               <div class="profile_header_badge">
