--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                            <div class="profile_header_badgeinfo_badge_area">
                               <a href="https://steamcommunity.com/id/wolfenstian/badges">
                                  <div class="persona_name persona_level">
-                                    Level 
+                                    Level
                                     <div class="friendPlayerLevel lvl_60"><span class="friendPlayerLevelNum">61</span></div>
                                  </div>
                               </a>
@@ -157,7 +157,7 @@
                            </div>
                            <div class="profile_summary_footer">
                               <div class="btn_profile_action btn_medium" id="getBg"><span>Buy This BG</span></div>
-                              <div class="btn_profile_action btn_medium" id="saveAll"><span>Download ZIP</span></div>
+                              <a class="btn_profile_action btn_medium saveButton" id="saveAll"><span>Download ZIP</span></a>
                               <a class="btn_profile_action btn_medium" id="userScript" href="https://github.com/theoddball/sapic-preview-button"><span>SCM Preview</span></a>
                            </div>
                         </div>
@@ -265,13 +265,12 @@
                      <div class="profile_customization_area">
                         <div class="profile_customization" id="cSize">
                            <div class="profile_customization_header">Artwork Showcase
-                              <span class="customization_header_download" id="saveFirst">Download this showcase</span>
                            </div>
                            <div class="profile_customization_block">
                               <div class="screenshot_showcase">
                                  <div class="screenshot_showcase_primary showcase_slot ">
                                     <div class="screenshot_showcase_screenshot resizable" id="hBig1" style="height: 506px;">
-                                       <img id="big1" class="imageHolder">
+                                       <div id="big1" class="imageHolder"></div>
                                     </div>
                                     <div class="screenshot_showcase_itemname" style="color: #5491cf; font-weight: bold;">
                                        Drag bottom of image to resize &#8593;					
@@ -284,17 +283,17 @@
                                  <div class="screenshot_showcase_rightcol">
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450', true );">
-                                          <img id="r11">
+                                          <div id="r11"></div>
                                        </div>
                                     </div>
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', true );">
-                                          <img id="r12">
+                                           <div id="r12"></div>
                                        </div>
                                     </div>
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', true );">
-                                          <img id="r13">
+                                           <div id="r13"></div>
                                        </div>
                                     </div>
                                     <a class="screenshot_showcase_smallscreenshot screenshot_count" href="http://steamcommunity.com/id/wolfenstian/images/">
@@ -309,13 +308,12 @@
                         </div>
                         <div class="profile_customization">
                            <div class="profile_customization_header">Screenshot Showcase
-                              <span class="customization_header_download" id="saveSecond">Download this showcase</span>
                            </div>
                            <div class="profile_customization_block">
                               <div class="screenshot_showcase">
                                  <div class="screenshot_showcase_primary showcase_slot ">
                                     <div class="screenshot_showcase_screenshot resizable" id="hBig2" style="height: 284px">
-                                       <img id="big2" class="imageHolder">
+                                       <div id="big2"></div>
                                     </div>
                                     <div class="screenshot_showcase_itemname">
                                        Mabinogi					
@@ -328,17 +326,17 @@
                                  <div class="screenshot_showcase_rightcol">
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605809&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605809', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605809', true );">
-                                          <img id="r21">
+                                           <div id="r21"></div>
                                        </div>
                                     </div>
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605824&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605824', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605824', true );">
-                                          <img id="r22">
+                                           <div id="r22"></div>
                                        </div>
                                     </div>
                                     <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot ">
                                        <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605839&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605839', 'http://steamcommunity.com/sharedfiles/filedetails/?id=299605839', true );">
-                                          <img id="r23">
+                                           <div id="r23"></div>
                                        </div>
                                     </div>
                                     <a class="screenshot_showcase_smallscreenshot screenshot_count" href="http://steamcommunity.com/id/wolfenstian/screenshots/">
